[gd_scene load_steps=14 format=3 uid="uid://mahg2nbldblf"]

[ext_resource type="Script" uid="uid://dc256idbg6umu" path="res://level/level.gd" id="1_dbc2d"]
[ext_resource type="Theme" uid="uid://bbr70t6gbgc2m" path="res://theme/maintheme.tres" id="2_44x8d"]
[ext_resource type="PackedScene" uid="uid://b8kf561rc3uea" path="res://interface/question_panel/question.tscn" id="3_44x8d"]
[ext_resource type="PackedScene" uid="uid://c0rltbdwa65jf" path="res://level/place_for_tower/place_for_tower.tscn" id="3_qohg2"]
[ext_resource type="Texture2D" uid="uid://coxkud27kxx4r" path="res://level/map2.png" id="3_vkbyq"]
[ext_resource type="Shader" uid="uid://cwge4y7tj8vrt" path="res://interface/main_menu/blur.gdshader" id="4_0v1st"]
[ext_resource type="PackedScene" uid="uid://b0dgarfasdp6i" path="res://level/map/map.tscn" id="4_ivpvi"]
[ext_resource type="Script" uid="uid://m1vo0myw6iol" path="res://level/wave_generator/wave_generator.gd" id="4_vkbyq"]
[ext_resource type="PackedScene" uid="uid://dmmbux1y4e8bw" path="res://interface/main_menu/cross_button.tscn" id="5_6gtgk"]
[ext_resource type="PackedScene" uid="uid://dj334r3yagshk" path="res://interface/settings_panel/settings.tscn" id="6_cw150"]

[sub_resource type="ShaderMaterial" id="ShaderMaterial_6gtgk"]
shader = ExtResource("4_0v1st")
shader_parameter/lod = 2.0

[sub_resource type="Curve2D" id="Curve2D_qohg2"]
_data = {
"points": PackedVector2Array(0.811934, 0.479215, -0.811934, -0.479215, 1058.44, 1285.58, 10.3547, 16.5611, -10.3547, -16.5611, 1035.95, 1212.36, 34.1032, 23.8404, -34.1032, -23.8404, 980.363, 1165.14, 33.411, 9.49215, -33.411, -9.49215, 754.981, 1121.75, 44.6448, 32.5666, -44.6448, -32.5666, 582.154, 1041.35, 6.02834, 21.6731, -6.02834, -21.6731, 502.391, 904.805, 32.9983, 50.2068, -32.9983, -50.2068, 468.957, 722.31, 0, 0, 0, 0, 361.825, 644.464, 20.8819, 12.6562, -20.8819, -12.6562, 249.639, 597.246, 28.4193, 21.6731, -28.4193, -21.6731, 148.571, 525.78, 0.647026, 28.4958, -0.647026, -28.4958, 110.165, 408.373, -25.1324, 28.5967, 25.1324, -28.5967, 162.72, 293.518, -34.4792, -1.43656, 34.4792, 1.43656, 301.184, 245.024, -50.2648, -12.8966, 50.2648, 12.8966, 506.353, 322.87, -35.827, 12.8966, 35.827, -12.8966, 652.902, 321.594, -56.6816, 8.4108, 56.6816, -8.4108, 891.423, 98.2648, 0, 0, 0, 0, 1049.61, 95.6508, -55.8902, -23.0456, 55.8902, 23.0456, 1194.61, 130.027, -6.41678, -33.0825, 6.41678, 33.0825, 1281.61, 229.188, 17.1114, -29.1574, -17.1114, 29.1574, 1271.52, 349.503, 29.4103, -17.3823, -29.4103, 17.3823, 1162.29, 451.763, 29.4103, -12.8966, -29.4103, 12.8966, 951.054, 520.676, 21.3519, -27.1388, -21.3519, 27.1388, 829.771, 594.693, -16.1756, -48.1714, 16.1756, 48.1714, 793.652, 738.215, -14.1997, -13.7109, 14.1997, 13.7109, 853.017, 826.956, -36.8805, -10.8555, 36.8805, 10.8555, 968.235, 878.002, -28.4691, 24.425, 28.4691, -24.425, 1288.62, 848.651, -40.1156, -18.3187, 40.1156, 18.3187, 1515.02, 863.965, 0.647026, -51.5638, -0.647026, 51.5638, 1604.97, 971.162, 33.0653, -4.59834, -33.0653, 4.59834, 1458.42, 1140.89, 0, 0, 0, 0, 1373.65, 1272.36)
}
point_count = 31

[sub_resource type="CircleShape2D" id="CircleShape2D_oem8r"]
radius = 100.005

[node name="Level" type="Node2D" node_paths=PackedStringArray("camera")]
position = Vector2(960, 540)
script = ExtResource("1_dbc2d")
camera = NodePath("Camera2D")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(0, 2)
limit_left = 0
limit_top = 0
limit_right = 1920
limit_bottom = 1080
position_smoothing_enabled = true

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="Control" parent="CanvasLayer"]
unique_name_in_owner = true
process_mode = 3
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
mouse_filter = 2
theme = ExtResource("2_44x8d")

[node name="Panel" type="PanelContainer" parent="CanvasLayer/Control"]
layout_mode = 1
anchors_preset = -1
anchor_left = 0.998
anchor_top = 0.00277779
anchor_right = 0.998
anchor_bottom = 0.0490741
offset_left = -348.16
offset_right = -0.160034
offset_bottom = 276.0
metadata/_edit_use_anchors_ = true

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Panel"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/Panel/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_right = 6

[node name="Gold" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer/HBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 0
theme_override_font_sizes/font_size = 60
text = "üí∞"
horizontal_alignment = 1
vertical_alignment = 1

[node name="GoldInput" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(1, 0.85098, 0.282353, 1)
theme_override_constants/outline_size = 5
autowrap_mode = 3
text_overrun_behavior = 3

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="Hp" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_font_sizes/font_size = 60
text = "‚ô•Ô∏è"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HpInput" type="Label" parent="CanvasLayer/Control/Panel/VBoxContainer/HBoxContainer2"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
theme_override_colors/font_color = Color(0.972549, 0.25098, 0.243137, 1)
theme_override_constants/outline_size = 5

[node name="MenuButton" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "–ú–µ–Ω—é"

[node name="StartWave" type="Button" parent="CanvasLayer/Control/Panel/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 28
text = "–ù–∞—á–∞—Ç—å –≤–æ–ª–Ω—É"

[node name="Button" type="Button" parent="CanvasLayer/Control"]
process_mode = 3
layout_mode = 1
anchors_preset = -1
anchor_left = 0.5
anchor_right = 0.5
offset_top = 24.0
offset_right = 91.3241
offset_bottom = 84.251
grow_horizontal = 2
grow_vertical = 2
keep_pressed_outside = true
text = "–ü–∞—É–∑–∞"

[node name="Button2" type="Button" parent="CanvasLayer/Control"]
layout_mode = 0
offset_left = 292.0
offset_top = 24.0
offset_right = 440.324
offset_bottom = 84.251
text = "–í–æ–ø—Ä–æ—Å"

[node name="Question" parent="CanvasLayer/Control" instance=ExtResource("3_44x8d")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="Menu" type="Control" parent="CanvasLayer/Control"]
unique_name_in_owner = true
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/Menu"]
material = SubResource("ShaderMaterial_6gtgk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.560784)

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/Menu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -226.5
offset_top = -131.0
offset_right = 226.5
offset_bottom = 131.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/Menu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="HBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/Menu/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 14

[node name="Label" type="Label" parent="CanvasLayer/Control/Menu/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
text = "–ú–µ–Ω—é"

[node name="SettingsButton" type="Button" parent="CanvasLayer/Control/Menu/PanelContainer/MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "–ù–∞—Å—Ç—Ä–æ–π–∫–∏"

[node name="ExitButton" type="Button" parent="CanvasLayer/Control/Menu/PanelContainer/MarginContainer/HBoxContainer"]
self_modulate = Color(0.737255, 0.137255, 0.137255, 1)
layout_mode = 2
size_flags_vertical = 0
theme_override_font_sizes/font_size = 40
text = "–ù–∞ –≥–ª–∞–≤–Ω—ã–π —ç–∫—Ä–∞–Ω"

[node name="MenuCrossButton" parent="CanvasLayer/Control/Menu" instance=ExtResource("5_6gtgk")]
layout_mode = 1
offset_left = 173.0
offset_top = -144.0
offset_right = 243.0
offset_bottom = -74.0001
scale = Vector2(0.86, 0.86)

[node name="Settings" parent="CanvasLayer/Control/Menu" instance=ExtResource("6_cw150")]
unique_name_in_owner = true
visible = false
layout_mode = 1

[node name="DefeatMenu" type="Control" parent="CanvasLayer/Control"]
unique_name_in_owner = true
process_mode = 3
visible = false
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Control/DefeatMenu"]
material = SubResource("ShaderMaterial_6gtgk")
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.560784)

[node name="PanelContainer" type="PanelContainer" parent="CanvasLayer/Control/DefeatMenu"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -20.0
offset_top = -20.0
offset_right = 20.0
offset_bottom = 20.0
grow_horizontal = 2
grow_vertical = 2

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/DefeatMenu/PanelContainer"]
layout_mode = 2
theme_override_constants/margin_left = 6
theme_override_constants/margin_top = 6
theme_override_constants/margin_right = 6
theme_override_constants/margin_bottom = 6

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control/DefeatMenu/PanelContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 12

[node name="Label" type="Label" parent="CanvasLayer/Control/DefeatMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(1, 0, 0, 1)
theme_override_constants/outline_size = 10
text = "–í—ã –ø—Ä–æ–≥–∏–≥—Ä–∞–ª–∏!"
horizontal_alignment = 1

[node name="RestartButton" type="Button" parent="CanvasLayer/Control/DefeatMenu/PanelContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
text = "–ù–∞—á–∞—Ç—å –∑–∞–Ω–æ–≤–æ"

[node name="ExitButton" type="Button" parent="CanvasLayer/Control/DefeatMenu/PanelContainer/MarginContainer/VBoxContainer"]
modulate = Color(0.694118, 0.0941176, 0.027451, 1)
layout_mode = 2
text = "–í—ã–π—Ç–∏ "

[node name="SubViewportContainer" type="SubViewportContainer" parent="CanvasLayer"]
visible = false
show_behind_parent = true
z_as_relative = false
offset_right = 1920.0
offset_bottom = 1083.0
stretch = true

[node name="SubViewport" type="SubViewport" parent="CanvasLayer/SubViewportContainer"]
transparent_bg = true
handle_input_locally = false
size = Vector2i(1920, 1083)
render_target_update_mode = 0

[node name="Level" type="Node2D" parent="."]
position = Vector2(-960, -540)

[node name="map" parent="Level" instance=ExtResource("4_ivpvi")]
visible = false

[node name="ChatGptImage8–ê–ø—Ä_2025–ì_,033356" type="Sprite2D" parent="Level"]
z_index = -100
scale = Vector2(1.25, 1.05469)
texture = ExtResource("3_vkbyq")
centered = false
metadata/_edit_lock_ = true

[node name="2Forest-Stage" type="Sprite2D" parent="Level"]
visible = false
z_index = -10
centered = false

[node name="Path2D" type="Path2D" parent="Level"]
unique_name_in_owner = true
position = Vector2(3, 89)
scale = Vector2(0.989429, 0.783597)
curve = SubResource("Curve2D_qohg2")

[node name="EnemyTimer" type="Timer" parent="Level"]

[node name="Home" type="Area2D" parent="Level"]
position = Vector2(1289.93, 1168.53)

[node name="CollisionShape2D" type="CollisionShape2D" parent="Level/Home"]
position = Vector2(78.0699, 11.47)
shape = SubResource("CircleShape2D_oem8r")

[node name="Places" type="Node2D" parent="Level"]

[node name="PlaceForTower" parent="Level/Places" instance=ExtResource("3_qohg2")]
position = Vector2(426, 863)

[node name="PlaceForTower2" parent="Level/Places" instance=ExtResource("3_qohg2")]
position = Vector2(585, 437)

[node name="PlaceForTower3" parent="Level/Places" instance=ExtResource("3_qohg2")]
position = Vector2(995, 842)

[node name="PlaceForTower4" parent="Level/Places" instance=ExtResource("3_qohg2")]
position = Vector2(120, 591)

[node name="PlaceForTower5" parent="Level/Places" instance=ExtResource("3_qohg2")]
position = Vector2(661, 1004)

[node name="PlaceForTower6" parent="Level/Places" instance=ExtResource("3_qohg2")]
position = Vector2(1022, 257)

[node name="PlaceForTower7" parent="Level/Places" instance=ExtResource("3_qohg2")]
position = Vector2(702, 595)

[node name="Wave_generator" type="Node" parent="Level"]
unique_name_in_owner = true
script = ExtResource("4_vkbyq")
metadata/_custom_type_script = "uid://m1vo0myw6iol"

[connection signal="pressed" from="CanvasLayer/Control/Panel/VBoxContainer/MenuButton" to="." method="_on_menu_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Panel/VBoxContainer/StartWave" to="." method="start_wave"]
[connection signal="pressed" from="CanvasLayer/Control/Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Button2" to="." method="_on_button_2_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Menu/PanelContainer/MarginContainer/HBoxContainer/SettingsButton" to="." method="_on_settings_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Menu/PanelContainer/MarginContainer/HBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/Menu/MenuCrossButton" to="." method="_on_menu_cross_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/DefeatMenu/PanelContainer/MarginContainer/VBoxContainer/RestartButton" to="." method="_on_restart_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/DefeatMenu/PanelContainer/MarginContainer/VBoxContainer/ExitButton" to="." method="_on_exit_button_pressed"]
[connection signal="timeout" from="Level/EnemyTimer" to="." method="next_enemy"]
[connection signal="area_entered" from="Level/Home" to="." method="_on_home_area_entered"]
[connection signal="add_enemy" from="Level/Wave_generator" to="." method="_on_wave_generator_add_enemy"]
[connection signal="wave_ended" from="Level/Wave_generator" to="." method="_on_wave_generator_wave_ended"]
